fix core layout jumping

--- a/style.css
+++ b/style.css
@@ -155,10 +155,16 @@ button {
     position: relative;
 }
 
-#levelSolvedSvg,
-#levelFailedSvg {
+#levelSolvedSvg {
     position: relative;
     top: -10px;
+}
+
+#levelFailedSvg {
+    position: absolute;
+    top: -10px;
+    width: 100%;
+    left: 0;
 }
 
 #levelSolvedSvg.animate {
@@ -1043,6 +1049,7 @@ button {
 
 .bottom-container {
     min-height: 12vw;
+    position: relative;
 }
 
 .controls {
@@ -1051,6 +1058,10 @@ button {
     justify-content: center;
     flex-shrink: 0;
     align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 .control-btn {
@@ -1073,12 +1084,14 @@ button {
     box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.25) inset;
     color: black;
     border: 2px solid black;
+    /* position: absolute; */
 }
 
 .continue {
     background: #141414;
     box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.25) inset;
     color: white;
+    position: absolute;
 }
 
 /* Power-ups */
